fix spacing

--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -100,10 +100,11 @@
 
 #main-about-content ul {
   list-style: none;
+  padding-left: 20px;
 }
 
 #main-about-content li {
-  padding: 20px;
+  padding: 20px 0;
   align-items: center;
   border-bottom: 1px solid #d2d6da;
   width: 325px;
